# spamlog

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: check.yml  release.yml
src/: main.rs
