[package]
name = "spamlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
governor = { version = "0.5" }
tokio = {version = "1.21", features = ["full"]}
hostname = "0.3.1"
chrono = "0.4.23"