[package]
name = "spamlog"
version = "0.2.0"
edition = "2021"
repository = 'https://github.com/udv-group/spamlog'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
governor = { version = "0.10" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "io-util",
  "macros",
  "net",
] }
hostname = "0.4.1"
chrono = "0.4"
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
